--- a/src/Components/ProductDetails.js/Product.css
+++ b/src/Components/ProductDetails.js/Product.css
@@ -40,7 +40,7 @@ margin-top: 10px;
 .add-delete{
 
 width: 30%;
-height:35px;
+height:40px;
 font-size: 15px;
 color: white;
 border: none;
@@ -105,7 +105,7 @@ margin-top: 10px;
 .add-delete{
 
 width: 35%;
-height:35px;
+height:40px;
 font-size: 15px;
 color: white;
 border: none;
@@ -169,7 +169,7 @@ margin-top: 10px;
 .add-delete{
 
 width: 35%;
-height:35px;
+height:40px;
 font-size: 15px;
 color: white;
 border: none;
@@ -234,7 +234,7 @@ margin-top: 10px;
 .add-delete{
 
 width: 35%;
-height:35px;
+height:40px;
 font-size: 15px;
 color: white;
 border: none;
